<h5>1.54 Final [2020-11-10]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
<hr>
- replaced index.html with index.php (geekwright/mamba)
- PHP 8 tests (mamba)
- code cosmetics (mamba)


<h5>1.54 RC-2 [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
<hr>
- Edit image off (aerograf)
- cosmetics  (aerograf)
- added removal of old tables on istall (mamba)
- namespaces, autoload (mamba)


<h5>1.54 RC-1 [2017-11-15]</h5>
<hr>
- added SCANDIR_SORT_NONE to scandir() (mamba)
- fixed folder links to images in style.css (mamba)
- added individual files for install/uninstall (mamba)
- added namespaces (mamba)
- moved functions to Utility class (mamba)
- added traits for Utility class (mamba)



<h5>1.54 Beta 1 [2017-05-02] - NOT RELEASED</h5>
<hr>
- added XsitemapUtility class (zyspec)
- added Addresses, AdsLight, AmReviews, AMS, eGuide, FmContent, Lexikon,
  MxDirectory, MyDownloads, MyWords, MyTube, PDLinks, Portfolio, Qpages,
  Recette, SmartFaq, SongList, TDMDownloads, TDMPictures, WfDownloads, WfLinks,
  XoopsFaq, xQuiz, & Xyp4all plugin support on install (zyspec)
- changed Publisher plugin to sort by weight instead of title (zyspec)
- changed PAYPAL to reference xoopsfoundation@gmail.com (zyspec)
- changed to require XOOPS 2.5.8+ (zyspec)
- changed to use XoopsRequest to filter input vars (zyspec)
- changed release notes to English (zyspec)
- changed rendering of XML file to include entity escaping strings (per sitemaps.org) (zyspec)
- changed rendering of XML to use DOCElement instead of hand coded strings (zyspec)
- changed XML generation to allow for modules that don't support subcategories (zyspec)
- changed to use \Xmf\Module\Helper & \Xmf\Admin (zyspec)
- changed assigned by reference for methods/functions (zyspec)
- changed most global references to use $[GLOBALS] (zyspec)
- changed class names to be more XOOPS compatible for loading (zyspec)
- changed phpDoc comments (copyright, XOOPS Url, etc) (zyspec)