@@ -24,9 +24,9 @@
 require __DIR__ . '/preloads/autoloader.php';
 $moduleDirName = basename(__DIR__);
 $modversion    = [
-    'version'             => 1.54,
-    'module_status'       => 'Final',
-    'release_date'        => '2020/11/10',
+    'version'             => 1.55,
+    'module_status'       => 'Beta 1',
+    'release_date'        => '2021/01/12',
     'name'                => _MI_XSITEMAP_NAME,
     'description'         => _MI_XSITEMAP_DESC,
     'author'              => 'Urbanspaceman',
