@@ -1,3 +1,8 @@
+<h5>1.55 Beta 1 [2021-01-12]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
+<hr>
+- namespaces, cosmetics (geeronzero/mamba)
+
+
 <h5>1.54 Final [2020-11-10]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
 <hr>
 - replaced index.html with index.php (geekwright/mamba)
